--- a/client/src/components/formularioModulos/formularioModulo.css
+++ b/client/src/components/formularioModulos/formularioModulo.css
@@ -27,6 +27,10 @@
   transition: all 0.3s
 }
 
+.flecha-atras {
+  font-size: 3rem;
+}
+
 
 /* Es el boton de anterior por si nos dicen de ponerlo, por ahora lo muestro, para ocultarlo descomentar la linea */
 /* .button-siguiente  {
@@ -94,6 +98,7 @@ background-color: #e0e0e0;
 }
 
 .warning {
+  text-align: center;
   color: red; 
   font-weight: bold;
   margin-top: 10px;
