--- a/client/src/components/consultoria/herramientas/Herramientas.css
+++ b/client/src/components/consultoria/herramientas/Herramientas.css
@@ -2,8 +2,8 @@
   padding: 20px;
   text-align: center;
   font-size: 20px;
-  border-width: 2px; /* Solo arriba y abajo */
-  border-color: #223D3C; /* Color del borde */
+  border-width: 2px; 
+  border-color: #223D3C; 
   margin-bottom: 2rem;
   }
   
@@ -19,7 +19,7 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
-    background-color: #f9f9f9;
+    background-color: #fff;
   }
   .herramienta {
     display: flex;
