--- a/client/src/components/packCard/packCard.css
+++ b/client/src/components/packCard/packCard.css
@@ -40,17 +40,22 @@
 }
 
 .pack1 {
-  background-color: #f0f9ff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .pack2 {
-  background-color: #e0ffe0;
-}
+  display: flex;
+  align-items: center;
+  justify-content: center;}
 
 .pack3 {
-  background-color: #fff9e6;
-}
+  display: flex;
+  align-items: center;
+  justify-content: center;}
 
 .pack4 {
-  background-color: #fff0f0;
-}
+  display: flex;
+  align-items: center;
+  justify-content: center;}
