--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -3,13 +3,14 @@ html, body {
   padding: 0;
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
 }
 
 body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 .footer {
