--- a/client/src/components/formacion/ComienzoF/ComienzoF.css
+++ b/client/src/components/formacion/ComienzoF/ComienzoF.css
@@ -1,67 +1,57 @@
 /* Estilos para el contenedor principal */
 .comienzoFContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
     height: 705px;
     width: 100%;
-    background-image: url('./comienzoF.jpeg');
+    background-image: url('./formacion/inicio.webp');
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; /* No repetir la imagen */
-    color: black; 
-    padding: 20px;
-
+    margin-top: 80px;
 }
 
 /* Estilos para el contenedor de texto */
 .comienzoFTexto {
-    margin-bottom: 10px;
-    text-align: left;
-    width: 100%;
-    height: 100%;
+    max-width: 500px;
+    height: 500px;
+    margin-bottom: 20px;
+    display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-left: 149px;
-
+    align-items: flex-start;
+    justify-content: center;
+    margin-left: 100px;
+    
 }
 
 .comienzoFTexto h2 {
-    font-size: 55px;
+    font-size: 50px;
     font-weight: bold;
-    width: 417px;
-    height: 92px;
-    margin-top: 500px;
-    margin-bottom: 4rem;
+    text-align: justify; 
+    margin:150px 0 0 0;
+    padding-top: 150px;
+  
 }
 
 .comienzoFTexto h3 {
-    font-size: 40x;
-    margin-top: 0;
-    width: 512px;
-    height: 27px;
+    font-size: 35px;
+    font-weight: normal;
+    margin: 0;
+    text-align: justify;
+
+
 }
 
-/* Estilos para el botón */
+
+
 .comienzoButtonF {
     background-color: #001f3f;
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 14px;
-    padding: 10px 20px;
-    margin-bottom: 10px;
-}
-
-.botonComienzoF{
-    margin-bottom: 10px;
-    text-align: left;
+    border: none;
+    font-size: 27px;
+    font-weight: bold;
     width: 100%;
-    height: 100%;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 149px;
-
+    padding: 20px;
+    margin-top: 50px;
 }
+
