--- a/client/src/components/timeLine/timeline.css
+++ b/client/src/components/timeLine/timeline.css
@@ -10,6 +10,19 @@
     z-index: 0;
   }
   
+  .timeline-titulo {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+  }
+  
+  .timeline-tituloh2 {
+    font-size: 24px;
+    font-weight: bold;
+  }
+
   .timeline-line {
     position: absolute;
     left: 150px;
